test/tests/compiler/5_local_variables/valid/short_circuit_or.plx





pub fn main(none) i32 {
    a: i32 = 0
    1 or (a = 1)
    return a
}
