test/tests/compiler/5_local_variables/invalid_parse/extra_credit/binary_increment.plx
pub fn main(none) i32 {
    a: i32 = 0
    return a ++ 1
}
